Footnote numbers should appear after punctuation and without extra space(s)

--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -446,7 +446,7 @@ $(function(){
 });
 ```
 
-Then, all the plots from your app will receive this on-click event [^javascript-4] .
+Then, all the plots from your app will receive this on-click event.[^javascript-4]
 
 [^javascript-4]: This `click` behavior can also be done through `$(".shiny-plot-output").click(...)`.
     We chose to display the `on("click")` pattern as it can be generalized to all DOM events.
