--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -13,7 +13,7 @@ Whatever your ambitions for your `{shiny}` application, you should take time tod
 A common thing you will hear about `{shiny}` is that it is a good prototyping tool.
 This cannot be denied.
 Building a Proof of Concept (PoC) for an app is relatively straightforward if you compare to what is needed to build applications in other languages.
-With `{shiny}`, you can build an "it works on my machine" web application in a couple of hours, and show it to your team, your boss, your investors. Thanks to the way `{shiny}` was designed, you do not have to care about websockets, ports, HTML, JavaScript libraries, and all the things that are elegantly bundled into `{shiny}`.
+With `{shiny}`, you can build an "it works on my machine" web application in a couple of hours, and show it to your team, your boss, your investors. Thanks to the way `{shiny}` was designed, you do not have to care about websockets, ports, HTML (HyperText Markup Language), JavaScript libraries, and all the things that are elegantly bundled into `{shiny}`.
 
 Hence, you can have a quick, hacky application that will work on your machine, and very rapidly.
 But that is not the way you should start.
