--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -150,7 +150,7 @@ Small is beautiful.
 Being able to properly cut a codebase into small modules will help developers build a mental model of the application (Remember ["What is a complex `{shiny}` application?"](#complex-shiny)).
 But what are `{shiny}` modules?
 
-> `{shiny}` modules address the namespacing problem in `{shiny}` UI and server logic, adding a level of abstraction beyond functions.\
+> `{shiny}` modules address the namespacing problem in `{shiny}` UI (User Interface) and server logic, adding a level of abstraction beyond functions.\
 > 
 > _Modularizing Shiny app code_ (<https://shiny.rstudio.com/articles/modules.html>)
 
@@ -400,7 +400,7 @@ mod_ui <- function(id, button_label) {
   )
 }
 
-# Printing the html for this piece of UI
+# Printing the HTML for this piece of UI
 mod_ui("mod_ui_1", button_label = "Validate ")
 mod_ui("mod_ui_2", button_label = "Validate, again")
 ```
