--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -196,6 +196,6 @@ There is a chance that they do not have in mind all of what is needed to deploy 
 
 For example, maybe your application has a database back-end.
 For that, you will need to have access to this database, the correct port should be set, and the permission given to the process that executes the `{shiny}` app to read, and maybe write, to the database.
-But, **and for good reason**, database managers do not issue read and write permissions to a DB without having examined what the app wants to read, and how and where it will write.
+But, **and for good reason**, database managers do not issue read and write permissions to a database without having examined what the app wants to read, and how and where it will write.
 To sum up, if you do not want to have weeks of delay for your app deployment, start the discussion from the very beginning of the project.
 That way, even if the process of getting permission to write on the company database takes time, you might have it by the end of the coding marathon.
