--- a/index.Rmd
+++ b/index.Rmd
@@ -99,7 +99,7 @@ This group will be more interested in the rest of the book, which roughly spans 
 Note that the technical elements covered in this book range from intermediate to advanced topics, and we hope that you will find relevant topics for your current goals, whatever your level is.
 
 In practice, we've come to realize that a lot of `{shiny}` projects are built by small team with a large number of these "teams" being composed of only one developer. 
-In this context, we have realized that project management and development are often assigned to the very same person^[Even if there are several developers in the team, the project manager is also involved in the coding process], making these two skills deeply integrated when carrying production projects. 
+In this context, we have realized that project management and development are often assigned to the very same person,^[Even if there are several developers in the team, the project manager is also involved in the coding process] making these two skills deeply integrated when carrying production projects. 
 
 That's why this book tries to reconcile both these worlds, as building production-grade software needs a reliable and operational code-base which is made possible by having solid technical skills, but also reliable and operational team-work and project management.
 
@@ -125,9 +125,9 @@ From the engineering point of view, a production-grade software can be relied up
 A production software also has real-life impact if something goes wrong: users will make wrong decisions, they might be unable to do their day-to-day work, and all the things that can happen when the software you use on a daily basis fails to run. 
 From the engineering point of view, a production-grade software has real impact when something goes wrong: someone has to fix the bug, the company selling the software might lose money, data can be lost, and so on. 
 
-Given these two properties, you can understand why being in production doesn't necessarily mean being served to gazillions of users^[
+Given these two properties, you can understand why being in production doesn't necessarily mean being served to gazillions of users,^[
 "Production" being equal to tons of users is a definition we regularly hear.
-], and serving trillions of GB of data: even software that is used by one person who relies on this application to do their job is a production software. 
+] and serving trillions of gigabytes of data: even software that is used by one person who relies on this application to do their job is a production software. 
 
 This is what this book is about: building `{shiny}` applications that can be used, on which you and your users can rely, and including all the tools that will help you prevent thing from going wrong, and when they eventually do, being equipped to quickly fix the bugs. 
 
@@ -145,7 +145,7 @@ _Part 5: Strengthen_ (Step 4) explores in-depth testing, continuous integration,
 _Part 6: Deploy_ (Step 5) develops the various possibilities for preparing your application to be deployed.
 
 + Part 7, "Optimizing" __tackles the question of optimization__, first by introducing the general concepts about optimization, then by presenting some common caveats of `{shiny}` apps, and then showing how to optimize R code, and how to use JavaScript to lighten R work. 
-This part ends with a gentle introduction to CSS
+This part ends with a gentle introduction to CSS (Cascading Style Sheets).
 
 
 ## About the authors {-}
@@ -218,9 +218,7 @@ __A large portion of this book is about the methodology, and not purely the tech
 
 When reading this book, remember that they are a "snapshot" of various technologies and packages, which might someday become out of date, have breaking changes, or even disappear.
 The last revisions of the pages you're reading now have been done on the `r format(Sys.Date(), format="%B %d, %Y")`.
-We will __try to update the online version whenever changes are made to the packages used in this book__, so feel free to browse the online version^[
-Available at <https://engineering-shiny.org>.
-] for up-to-date information.
+We will __try to update the online version whenever changes are made to the packages used in this book__, so feel free to browse the online version^[Available at <https://engineering-shiny.org>.] for up-to-date information.
 
 ## Software information and conventions {-}
 
