all figures are to be called out in text

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -271,7 +271,7 @@ For example, here we can see that `{hemake}` has `r dplyr::filter(hexmake_cloc, 
 Cyclomatic complexity is a software engineering measure which **allows us to define the number of different linear paths a piece of code can take**.
 The higher the number of paths, the harder it can be to have a clear mental model of this function.
 
-Cyclomatic complexity is computed based on a control-flow graph [^big-shiny-9] representation of an algorithm.
+Cyclomatic complexity is computed based on a control-flow graph [^big-shiny-9] representation of an algorithm, as can be seen on Figure \@ref(fig:01-big-shiny-10).
 For example, here is a simple control flow for an `ifelse` statement *(The following paragraph details the algorithm implementation, feel free to skip it if you are not interested in the implementation details)*.
 
 [^big-shiny-9]: A control flow graph is a graph representing all the possible paths a piece of code can take while it is executed.
