--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -416,6 +416,7 @@ mod_ui("mod_ui_2", button_label = "Validate, again")
 The **app\_server** side contains a series of `mod_server(unique_id, ...)`, also allowing additional parameters, just like any other function.
 
 As a live example, we can have a look at [mod\_dataviz.R](https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L17) from the `{tidytuesday201942}` [@R-tidytuesday201942] `{shiny}` application, available at <https://connect.thinkr.fr/tidytuesday201942/>.
+Figure \@ref(fig:03-structure-6) is a screenshot of this application.
 
 This application contains 6 tabs, 4 of them being pretty much alike: a side bar with inputs, a main panel with a button, and the plot.
 This plot can be, depending on the tab, a scatterplot, a histogram, a boxplot, or a barplot.
