--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -474,7 +474,7 @@ server2:
   mongocollecton: app1
 ```
 
-Using this configuration file, you can then deploy the very same app on the two servers, and configure what is going to be read by the application by setting an environment variable inside the RStudio Connect interface.
+Using this configuration file, you can then deploy the very same app on the two servers, and configure what is going to be read by the application by setting an environment variable inside the RStudio Connect interface, as shown in Figure \@ref(fig:04-golem-22).
 
 (ref:envvarconnect) Setting an environment variable in RStudio Connect.
 
