--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -46,7 +46,7 @@ One big lie we tell ourselves as developers is that the end user will use the ap
 We love to think that when faced with our app, the users will carefully read the instructions and make a rational decision based on careful examination of the inputs before doing what we expect them to do.
 But the harsh truth is, that it is not what happens.
 
-First of all, users rarely carefully read all the instructions: they **scan** and perform the first action that more or less matches what they need to do, i.e., they **satisfice** (a portmanteau of satisfy and suffice).
+First of all, users rarely carefully read all the instructions: they **scan** and perform the first action that more or less matches what they need to do, i.e., they **satisfice** (a portmanteau of satisfy and suffice); a process shown in Figure \@ref(fig:06-ux-matters-1).
 Navigating the web, users try to optimize their decision, not by making the decision that would be "optimal", but by doing the first action that is sufficiently satisfactory in relevance.
 They behave like that for a lot of reasons, but notably because they want to be as quick as possible on the web, and because the cost of being wrong is very low most of the time - even if you make the wrong decision on a website, chances are that you are just a "return" or "cancel" button away from canceling your last action.
 
@@ -57,7 +57,7 @@ From [@stevekrug2014].
 knitr::include_graphics("img/scanning.png")
 ```
 
-For example, let's have a look at the user interface of `{hexmake}` [@R-hexmake], a `{shiny}` app for building hex stickers, available at <https://connect.thinkr.fr/hexmake/>.
+For example, let's have a look at the user interface of `{hexmake}` [@R-hexmake], a `{shiny}` app for building hex stickers, available at <https://connect.thinkr.fr/hexmake/> (see Figure \@ref(fig:00-app-presentation-3) for a screenshot of this application).
 
 (ref:hexmakecap) Snapshot of the `{hexmake}` `{shiny}` application on <https://connect.thinkr.fr/hexmake/>.
 
@@ -393,7 +393,7 @@ Here, as a user, it is way easier to understand what went wrong: we have moved f
 Perfect way to reduce your bug tracker incoming tickets!
 
 This is a way to do it natively in `{shiny}`, but note that you can also use the `{shinyAlert}` package to implement alerts.
-It is also possible to build your own with a little bit of HTML, CSS and JavaScript, as shown on [the `notifyjsexample` repository](https://github.com/ColinFay/notifyjsexample).
+It is also possible to build your own with a little bit of HTML, CSS and JavaScript, as shown in [the `notifyjsexample` repository](https://github.com/ColinFay/notifyjsexample).
 
 ## The danger of feature-creep
 
@@ -469,7 +469,7 @@ Finally, if you do choose to use an interactive library for your application, tr
 #### B. Visual noise {.unnumbered}
 
 More interactivity can lead to an element being less straightforward to understand.
-Think for a minute about the `{plotly}` outputs.
+Think for a minute about the `{plotly}` outputs, as seen on Figure \@ref(fig:06-ux-matters-11).
 They are awesome if you need this kind of interactivity, but for a common plot there might be too many things to understand.
 Instead of focusing on the data, a lot of things show: buttons to zoom, to do selection, to export in png, and things like that.
 With this kind of graph, users might lose some time focusing on understanding what the buttons do and why they are there, instead of focusing on what matters: getting insights from the data.
@@ -795,7 +795,8 @@ You can also use a Google Chrome built-in tool called `LightHouse` (we will come
 
 -   [Evaluating Web Accessibility](https://www.w3.org/WAI/test-evaluate/) comes with lengthy reports and advice about checking the accessibility of your website.
 
--   <https://www.webaccessibility.com/> has an online checker for web page accessibility, and allows you to freely test 5 pages.
+-   <https://www.webaccessibility.com/> has an online checker for web page accessibility, and allows you to freely test 5 pages. 
+The result of a test on the `{hexmake}` application can be seen on Figure \@ref(fig:06-ux-matters-27).
 
 (ref:accessibilitycap) Web accessibility results for the `{hexmake}` application.
 
