--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -11,7 +11,7 @@
 And yet another rule from _The Art of Unix Programming_: "Rule of Optimization: Prototype before polishing. **Get it working before you optimize it**."
 Getting things to work before trying to optimize the app is always a good approach:
 
--   **Making things work before working on low-level optimization makes the whole engineering process easier**: having a "minimal viable product" that works, even if slowly and not perfectly, gives a stronger sense of success to the project. For example if you are building a vehicle, it feels more of a success to start with a skateboard than with a wheel: you quickly have a product that can be used to move, not waiting for the end of the project before finally having something useful. Building a skateboard helps the developer maintain a sense of accomplishment throughout the life of the project: the quicker you can have a running program, the better.
+-   **Making things work before working on low-level optimization makes the whole engineering process easier**: having a "minimal viable product" that works, even if slowly and not perfectly, gives a stronger sense of success to the project. For example if you are building a vehicle, it feels more of a success to start with a skateboard than with a wheel: you quickly have a product that can be used to move, not waiting for the end of the project before finally having something useful. Building a skateboard helps the developer maintain a sense of accomplishment throughout the life of the project: the quicker you can have a running program, a MVP (Minimum Viable Product, as seen on Figure \@ref(fig:09-prototyping-1)), the better. 
 
 > One of the really nice things about running your program frequently is that you get to see it running, which is fun, ans that's what programming is all about.
 > 
@@ -99,7 +99,7 @@ remotes::install_github("Thinkr-open/shinipsum")
 
 This package includes a series of functions that generates random placeholders.
 For example, `random_ggplot()` generates random `{ggplot2}` [@R-ggplot2] elements.
-If we run this code two times, we should get different results:[^prototyping-1]
+If we run this code two times, we should get different results, as seen on Figure \@ref(fig:09-prototyping-4) and Figure \@ref(fig:09-prototyping-5).[^prototyping-1]
 
 [^prototyping-1]: Well, there is a probability that we will get the same plot twice, and but that is the beauty of randomness.
 
@@ -115,7 +115,7 @@ random_ggplot() +
   labs(title = "Random plot") 
 ```
 
-(ref:randomplot2) A random plot.
+(ref:randomplot2) Another random plot.
 
 ```{r 09-prototyping-6, fig.cap="(ref:randomplot2)", out.width="100%"}
 random_ggplot() + 
@@ -124,6 +124,9 @@ random_ggplot() +
 
 Of course, the idea is to combine this with a `{shiny}` interface, for example, `random_ggplot()` will be used with a `renderPlot()` and `plotOutput()`.
 And as we want to prototype but still be close to what the app might look like, these functions take arguments that can shape the output: for example, `random_ggplot()` has a `type` parameter that can help you select a specific `{ggplot2}` geom.
+
+Figure \@ref(fig:09-prototyping-8) is a screenshot of this application.
+
 
 ```{r 09-prototyping-7, eval = FALSE}
 library(shiny)
