--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -44,7 +44,7 @@ There are several packages in R that can be used to implement unit testing, and 
 One of the most popular right now [^step-by-step-secure-1] is `{testthat}` [@R-testthat].
 This testing framework lets you write a series of tests and expectations, which are then launched when calling `test()` from `{devtools}` [@R-devtools], either locally or in your CI system.
 
-[^step-by-step-secure-1]: Popularity based on the number of reverse dependencies and suggests, as shown on <https://cran.r-project.org/web/packages/testthat/index.html>.
+[^step-by-step-secure-1]: Popularity based on the number of reverse dependencies and suggests, as shown in <https://cran.r-project.org/web/packages/testthat/index.html>.
 
 Here is an example of testing that the `meaning_of_life` will always be `42`.
 
@@ -404,6 +404,7 @@ Then, `{shinyloadtest}` comes with a series of plotting functions that can be us
 For example:
 
 -   `slt_session_duration()` plots the session duration, with the various types of events that take computation time: JS and CSS load, R computation, etc.
+The output is available in Figure \@ref(fig:11-step-by-step-secure-21).
 
 (ref:sessionduration) Session duration.
 
