--- a/12-secure.Rmd
+++ b/12-secure.Rmd
@@ -92,7 +92,8 @@ When you start a project, you are in the main branch, which is called the "main"
 In a perfect world, you never work directly on this branch: it should always contain a working, deployable version of the application.
 
 Other branches are to be thought of as work areas, where developers fix bugs or add features.
-The modifications made in these development branches will then be transferred (directly or indirectly) to the main branch.
+The modifications made in these development branches will then be transferred (directly or indirectly) to the main branch. 
+This principle is shown in Figure \@ref(fig:12-secure-1).
 
 (ref:gitbranchcap) Branches in Git.
 
