--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -191,7 +191,7 @@ What you see in the top window is the expression evaluated, and on the bottom th
 This result reads as follow: the wider the function call, the more time it has taken R to compute this piece of code.
 On the very bottom, the "top" function (i.e. the function which is directly called in the console), and the higher you go, the more you enter the nested function calls.
 
-Here is how to read this graph:
+Here is how to read the graph in \@ref(fig:14-when-optimize-4):
 
 -   On the x axis is the time spent computing the whole function.
     Our `top()` function being the only one executed, it takes the whole record time.
@@ -207,7 +207,7 @@ Here is how to read this graph:
 knitr::include_graphics("img/profviz_flame.png")
 ```
 
-If you click on the "Data" tab, you will also find another view of the `flame graph`, where you can read the hierarchy of calls and the time and memory spent on each function call:
+If you click on the "Data" tab, you will also find another view of the `flame graph`, shown in \@ref(fig:14-when-optimize-5), where you can read the hierarchy of calls and the time and memory spent on each function call:
 
 (ref:profvizdata) `{profvis}` data tab.
 
