--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -621,7 +621,7 @@ Combining `cat_where()` will implement a reactive logging to your console while 
 Of course, you still have to implement it by hand, but that is definitely worth the effort: seeing in real time, in your console, which line is run allows you to detect unexpected behavior.
 For example, you will be able to see that the `observeEvent()` from `mod_main.R#79` has been called 17 times when launching the app, which might be an unexpected behavior.
 
-The following screenshot shows what a `{whereami}` log might look like, here, for the `{hexmake}` application.
+The screenshot in Figure \@ref(fig:15-common-app-caveats-13) shows what a `{whereami}` log might look like, here, for the `{hexmake}` application.
 
 (ref:whereami) `{whereami}` output for `{hexmake}`.
 
@@ -629,7 +629,7 @@ The following screenshot shows what a `{whereami}` log might look like, here, fo
 knitr::include_graphics("img/whereami.png")
 ```
 
-And bonus, once the app is closed, you can get a list of all the "counters" with `whereami::counter_get()`, and how many times they each have been called, and `plot(whereami::counter_get())` will draw a raw plot of the various counters.
+And bonus, once the app is closed, you can get a list of all the "counters" with `whereami::counter_get()`, and how many times they each have been called, and `plot(whereami::counter_get())` will draw a raw plot of the various counters, as shown in Figure \@ref(fig:15-common-app-caveats-14).
 
 (ref:whereamiplot) plot of `{whereami}` counters.
 
