--- a/18-css.Rmd
+++ b/18-css.Rmd
@@ -42,7 +42,7 @@ As you can see, if you have created a `fluidPage()` before, there is already sty
 
 Compare:
 
-(no `fluidPage`)
++ No `fluidPage`, Figure \@ref(fig:18-css-5)
 
 ```{r 18-css-4, eval = FALSE}
 library(shiny)
@@ -72,7 +72,7 @@ shinyApp(ui, server)
 knitr::include_graphics("img/no-css-shiny.png")
 ```
 
-to (with `fluidPage`):
++ With `fluidPage`, Figure \@ref(fig:18-css-7)
 
 ```{r 18-css-6, eval = FALSE}
 library(shiny)
@@ -166,7 +166,7 @@ Note that good practice is considered to be the integration of an external file.
 
 ### Inline CSS
 
-If you need to add style to one specific element, you can write it straight inside the HTML tag:
+If you need to add style to one specific element, you can write it straight inside the HTML tag, as seen in Figure \@ref(fig:18-css-9):
 
 ```{r 18-css-8, eval = FALSE }
 library(shiny)
@@ -200,7 +200,7 @@ Use it with caution.
 
 If you had a `tags$style()` somewhere inside your UI code (generally at the very beginning of your UI), you could then add CSS code straight to your application.
 
-Here is an example:
+Figure \@ref(fig:18-css-11) is an example:
 
 ```{r 18-css-10, eval = FALSE}
 library(shiny)
