--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -62,7 +62,7 @@ Cheers!
 
 ### Building a concept map {.unnumbered}
 
-\@ref(fig:19-appendix-1) is the concept map for this application, using Xmind.
+Figure \@ref(fig:19-appendix-1) is the concept map for this application, using Xmind.
 
 (ref:conceptmapminifyr) A concept map for the minifying application.
 
@@ -295,7 +295,7 @@ Now, time to move this into a vignette!
 
 ### UI prototyping {.unnumbered}
 
-Let's start by drawing a small mockup of our front-end using [Excalidraw](https://excalidraw.com/).
+Let's start by drawing a small mockup of our front-end using [Excalidraw](https://excalidraw.com/), as seen in Figure \@ref(fig:19-appendix-8).
 
 (ref:excalidraw) A mockup for the UI of our application, made with Excalidraw <https://excalidraw.com/>.
 
