--- a/00-app-presentation.Rmd
+++ b/00-app-presentation.Rmd
@@ -38,6 +38,8 @@ This book uses a series of applications as examples.
 `{hexmake}` is an application that has been designed to build hex logos.
 It's been built by Colin, and it serves two main purposes: it helps the creation of a logo, but mainly it serves as an example of some complex features you can use inside a `{shiny}` application (image manipulation, custom CSS, linking to an external database, save and restore, etc.).
 
+Figure \@ref(fig:00-app-presentation-1) is a screenshot of this application.
+
 (ref:hexmakefront) The `{hexmake}` application.
 
 ```{r 00-app-presentation-1, echo=FALSE, fig.cap="(ref:hexmakefront)", out.width="100%"}
@@ -52,6 +54,8 @@ The code is available at [github.com/ColinFay/hexmake](https://github.com/ColinF
 
 `{tidytuesday201942}` is an application using the dataset from week 42 of `tidytuesday` 2019.
 It's been built by Colin, and it serves as an example of an app built from scratch using bootstrap 4.
+
+Figure \@ref(fig:00-app-presentation-2) is a screenshot of this application.
 
 (ref:tidytuesday) The `{tidytuesday201942}` application.
 
@@ -68,6 +72,8 @@ The code is available at [github.com/ColinFay/tidytuesday201942](https://github.
 `{minifying}` is an application to minify CSS, JavaScript, HTML and JSON files.
 It's been built by Colin as a use case for the workflow of this book.
 You will find the details of how this app was constructed in the Appendix, "*Use case: Building an App, from Start to Finish*".
+
+Figure \@ref(fig:00-app-presentation-3) is a screenshot of this application.
 
 (ref:minifying) The `{minifying}` application.
 
