--- a/book.bib
+++ b/book.bib
@@ -154,3 +154,16 @@ Eprint = {arXiv:2001.10641},
   title = {Creating and Using Personas in Software Development: Experiences from Practice},
   booktitle = {Human-Centered Software Engineering}
 }
+
+@article{Simon1956,
+  doi = {10.1037/h0042769},
+  url = {https://doi.org/10.1037/h0042769},
+  year = {1956},
+  publisher = {American Psychological Association ({APA})},
+  volume = {63},
+  number = {2},
+  pages = {129--138},
+  author = {H. A. Simon},
+  title = {Rational choice and the structure of the environment.},
+  journal = {Psychological Review}
+}
