Typo in index: "French" starts with an upper case

--- a/index.Rmd
+++ b/index.Rmd
@@ -153,7 +153,7 @@ _Step 5: Deploy_ develops the various possibilities for preparing your applicati
 
 Colin has written the vast majority of this book. He's responsible for its general structure, and for the original designer of the workflow described. Most of the time (if not every time) "we" actually refers to him. He is the lead developer of the `{golem}` framework, and creator of many tools described in this book. 
 
-Colin works at ThinkR, a french agency focused on everything R-related. During the day, he helps companies to take full advantage of the power of R, by building tools (packages, web apps...) and setting up infrastructure. His main areas of expertise are data & software engineering, infrastructure, web applications (front-end and back-end), and R in production. 
+Colin works at ThinkR, a French agency focused on everything R-related. During the day, he helps companies to take full advantage of the power of R, by building tools (packages, web apps...) and setting up infrastructure. His main areas of expertise are data & software engineering, infrastructure, web applications (front-end and back-end), and R in production. 
 
 During the night, Colin is also an hyperactive open source developer and an open data advocate. You can find a lot of his work on his GitHub account (https://github.com/ColinFay) and on ThinkR's account (https://github.com/thinkr-open).
 
