Typo in 03-structure: "French" starts with an upper-case letter

--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -581,7 +581,7 @@ One of the hardest part of using modules is sharing data across them.
 There are at least three approaches:
 
 -   Returning a `reactive` function
--   The "stratégie du petit r" (to be pronounced with a french accent of course)
+-   The "stratégie du petit r" (to be pronounced with a French accent of course)
 -   The "stratégie du grand R6".
 
 #### A. Returning values from the module {.unnumbered}
